openmediavault (1.0.29) stable; urgency=low

  * Mantis 0000876: Daily mdadm cron job exited with return code 1.

 -- Volker Theile <volker.theile@openmediavault.org>  Fri, 10 Oct 2014 08:27:47 +0200

openmediavault (1.0.28) stable; urgency=low

  * Update locales.
  * Refactor browser language auto-detection.
  * Improve the OMVFilesystem::getMountPoint and OMVFilesystem::isMounted
    methods.
  * Mantis 0001141: smartd: Reference disks by ATA-/SCSI-Id.
  * Mantis 0001142: Shares with spaces in the path/directory don't appear
    when using FTP/FTPS.

 -- Volker Theile <volker.theile@openmediavault.org>  Tue, 07 Oct 2014 09:57:31 +0200

openmediavault (1.0.27.3) stable; urgency=low

  * Remove browser language auto-detection.
  * Mantis 0001137: Can't access the web interface, permanent refresh.

 -- Volker Theile <volker.theile@openmediavault.org>  Tue, 07 Oct 2014 00:27:42 +0200

openmediavault (1.0.27.2) stable; urgency=low

  * Mantis 0001137: Can't access the web interface, permanent refresh.

 -- Volker Theile <volker.theile@openmediavault.org>  Mon, 06 Oct 2014 23:21:19 +0200

openmediavault (1.0.27.1) stable; urgency=low

  * Fix bug in fstab RPC.

 -- Volker Theile <volker.theile@openmediavault.org>  Mon, 06 Oct 2014 17:09:26 +0200

openmediavault (1.0.27) stable; urgency=low

  * Improve filesystem handling in backend.
  * Auto-detect browser language.
  * Mantis 0001119: Can't mount HDD to file systems.

 -- Volker Theile <volker.theile@openmediavault.org>  Mon, 06 Oct 2014 08:29:23 +0200

openmediavault (1.0.26) stable; urgency=low

  * Mantis 0001132: Filesystem not written to fstab when there is no 'hidden'
    attribute.

 -- Volker Theile <volker.theile@openmediavault.org>  Sun, 05 Oct 2014 10:02:32 +0200

openmediavault (1.0.25) stable; urgency=low

  * Improve filesystem backend.

 -- Volker Theile <volker.theile@openmediavault.org>  Thu, 02 Oct 2014 10:23:00 +0200

openmediavault (1.0.24) stable; urgency=low

  * Update locales.